--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     
     // Establece el volumen al 50% (0.5)
     audio.volume = 0.1;
+      document.body.addEventListener('click', function() {
+        var audio = document.getElementById('miAudio');
+        audio.play();
+        });
 </script> 
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
     <div class="night"></div>
